# Algoritmeregister

./: .gitignore  .gitlab-ci.yml  LICENSE.md  README.md  algoritmeregister.code-workspace  docker-compose.yml  migration_instruction.md  package-lock.json  schema.json
backend/: .coveragerc  .env.dummy  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  start.sh  type_check.sh
backend/alembic/: env.py
backend/alembic/scripts/: create_frysian_full_text_search_configuration.sql  create_vectorized_column.sql  create_vectorized_column_org.sql  create_words_table.sql  downgrade_vector_1_0_0.sql  execute_abbreviation_dictionairy_configuration.sql  execute_full_text_search_configuration.sql  init.sql  init_testdata.sql  remove_vectorized_column.sql  remove_vectorized_column_org.sql  remove_words_table.sql  upgrade_vector_1_0_0.sql
backend/alembic/versions/: 02307b00ee08_add_parent_child_to_organisation.py  04b904159980_rename_schema_to_standard_version.py  0a0ff83803b0_add_action_history_table.py  0a1b6fc81205_remove_leverancier_id.py  0c2d4ffb07ff_add_roo_columns_to_organisation.py  116c2febf399_migrate_name_to_organisation_details.py  216e1a80d74b_initial_version.py  243d3a6d2320_vectorised_organisation_details_column.py  26b1ef55e478_create_table_html_figures.py  2929cd63a048_add_organisation_table.py  33b0feaf1896_increase_column_size_impacttoetsen.py  3a08d0a0aede_add_frysian_to_language_enum.py  3de4ce027fe0_execute_full_text_search_configuration.py  412c46f50f27_add_organisation_type.py  42e58f22ba71_migrate_data_to_org_table.py  4fa08b56de37_iama_column.py  59ae16a67b97_add_state_in_algoritme_version.py  6ce739d70f55_add_released_column.py  729c45f8a00f_add_precomputed_stats_table.py  79c11dd82bc1_add_organisation_details.py  808e25658734_add_flow_in_table.py  8420ea417658_increase_organisation_details_about.py  845b0b6e654f_build_tables.py  8691fce44bf2_add_columns_for_0_3_1.py  8d57b6b9667f_create_algoritme_slug.py  901dc83e8cc1_self_hosted_embedding.py  926a9cef924c_verwijder_algorimes_spoedverzoek.py  94bf47cb75fb_vectorised_algoritme_version_columns.py  995060402de4_algoritme_uuid.py  9e7ff58ba2cd_upload_data.py  a3ff62ca5a84_execute_abbreviation_dictionary_.py  ab94ba0fb1e1_add_preferred_name.py  b5ce4561c092_words_table_for_algoritme_version.py  ba4ce1f66866_0_4_0.py  c6bff8b8c900_add_language_dependency.py  cbebdfcd0582_convert_db_action_enum_to_varchar.py  d621bd490e48_remove_default_value_language.py  d807befdcc18_rename_email_to_contact_info_org_page.py  dc89dfa5c832_execute_fts_conf_frisian.py  e4dc5e7bafc3_increase_column_sizes.py  (+3 more)
backend/app/: api.py  main.py  spell_checker.py
backend/app/config/: api.py  org_name_mapping.py  org_type_mapping.py  publication_standard.py  resource.py  settings.py
backend/app/controllers/: __init__.py  action.py  action_history.py  algoritme.py  c3po.py  excel_download.py  file_download.py  flow.py  governmental_organisations.py  html_figures.py  mailing.py  organisation_details.py  organization.py  pdf_download.py  precomputed_values.py  smart_search.py  templates.py  user.py  vector_search.py  word_download.py
backend/app/data/: static_content_default.json
backend/app/database/: database.py
backend/app/embeddors/: bert.py  preprocessor.py
backend/app/etl/: load.py
backend/app/mailing/: __init__.py  mailing.py
backend/app/middleware/: __init__.py  keycloak_api.py  keycloak_authenticator.py  middleware.py
backend/app/models/: __init__.py  action_history.py  algemene_informatie.py  algoritme.py  algoritme_version.py  default.py  html_figures.py  inzet.py  juridisch.py  metadata.py  organisation.py  organisation_details.py  precomputed_values.py  toepassing.py  words.py  (+1 more)
backend/base_image/: Dockerfile  README.md
backend/common/: database_url.py
backend/dev_db/: init.sql
backend/etl/: cron_job.py  load.py  logger.py
backend/misc/: parse-css.ipynb
backend/scripts/: add_og_published.py  add_org_type.py  remove_fake_accounts.py  remove_trailing_zeros_pub_standard.py  translate_existing.py  users_prd_to_tst.py
backend/tests/: __init__.py  conftest.py  test_controllers.py  test_endpoints.py  test_file_download.py  test_impact_grouping.py  test_preditor.py  test_public_endpoints.py  test_services.py  test_smart_search.py  test_translator.py  test_upc.py  test_word_download.py
etl/: Dockerfile  pyproject.toml  start.sh
etl/app/: data.json  main.py
etl/base_image/: Dockerfile  README.md  requirements.txt
etl/common/: database_url.py
(+637 files in other folders)
