[tool.poetry]
name = "areg-packages"
version = "0.1.0"
description = ""
authors = ["Terry Crapts <terry.crapts@ictu.nl>", "Lars Musters <lars.musters@ictu.nl>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "0.92.0", extras = ["all"]}
SQLAlchemy = "^1.4.42"
python-dotenv = "^0.21.0"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
pandas = "^1.5.1"
openpyxl = "^3.0.10"
python-slugify = "^7.0.0"
grequests = "^0.6.0"
python-jose = "^3.3.0"
cryptography = "^39.0.1"
passlib = "^1.7.4"
wheel = "^0.38.1"
pytest = "^7.1.2"
coverage = "^6.0"
python-keycloak = "2.9.0"
pyjwt = {version = "2.6.0", extras = ["crypto"]}

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^22.10.0"}
flake8 = "^5.0.4"
ipykernel = "^6.16.2"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
