[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
flake8 = "^6.1.0"
black = "^23.7.0"
sqlalchemy = "^2.0.19"
python-dotenv = "^1.0.0"
pandas = "^2.0.3"
psycopg2-binary = "^2.9.5"
pydantic-settings = "^2.0.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
